Archive2/95/4618fecb0a6f88/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In constructor 'Derived::Derived()':
main.cpp:25:17: error: class 'Derived' does not have any field named 'tag'
     Derived() : tag(B) { }
                 ^
